feat(scheme): create plugin for AMD SEV-SNP
define SEV-SNP scheme for Veraison

Signed:off-by: Jagannathan Raman <jag.raman@oracle.com>

--- a/scheme/Makefile
+++ b/scheme/Makefile
@@ -8,6 +8,7 @@ SUBDIR += psa-iot
 SUBDIR += tpm-enacttrust
 SUBDIR += parsec-tpm
 SUBDIR += parsec-cca
+SUBDIR += sevsnp
 
 clean: ; $(RM) -rf ./bin
 
