feat(scheme): implement evidence handler
Implement an evidence handler to extract claims from the evidence token
and store them in an internal representation format ( CoRIM for SEV-SNP).

Additionally, implement the GetLevel interface for HCLogger, which was
introduced with v1.5.0.

Signed-off-by: Jagannathan Raman <jag.raman@oracle.com>

hclogger: update

--- a/scheme/sevsnp/plugin/Makefile
+++ b/scheme/sevsnp/plugin/Makefile
@@ -3,6 +3,7 @@
 
 ifndef COMBINED_PLUGINS
   SUBDIR += endorsement-handler
+  SUBDIR += evidence-handler
   SUBDIR += store-handler
 else
   SUBDIR += combined
